<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EnergyLens+</string>
    <string name="title_activity_main">EnergyLens+</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_force_start">Force Start</string>
    <string name="action_force_stop">Force Stop</string>
    <string name="action_manual_override">Manual Override</string>
    <string name="title_activity_axl_serv">AxlServ</string>
    <string name="title_activity_collection_tab">EnergyLens+</string>
    <string name="title_section1">Train</string>
    <string name="title_section2">Energy Wastage</string>
    <string name="title_section3">Energy Usage</string>
    <string name="title_activity_train">EnergyLens+</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_appliances">Select appliances</string>
    <string name="dialog_locations">Select location</string>
    <string name="dialog_train_more">Already done training?</string>
    <string name="yes">Yes</string>
    <string name="title_activity_settings">EnergyLens+</string>
    <string name="no">No</string>
    <string name="title_section4">Real-Time Power</string>
    <string name="title_activity_reassign">ReassignActivity</string>
    <string name="server_registering">Server is registering</string>
    <string name="server_registered">Server is registered</string>
    <string name="server_unregister_error">ERROR while unregistering from Server</string>
    <string name="server_register_error">ERROR while registering with server</string>
    <string name="server_unregistered">Server is unregistered</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_gcm">GCMActivity</string>
    <string name="dialog_try_again">Registration failed. Give it another try?</string>
    <string name="dialog_refused_try_again">Report submission failed. Contact administrator.</string>
    <string name="title_activity_time_select">EnergyLens+</string>
    <string name="title_activity_correction">EnergyLens+</string>
    <string name="action_report">Report</string>
    <string name="title_activity_ground_report">EnergyLens+</string>
    <string name="action_train">Training</string>
    <string name="title_activity_ground_report_list">EnergyLens+</string>
    <string name="title_activity_socket">SocketActivity</string>
    <string name="title_activity_about">EnergyLens+</string>
    <string name="instruction_ground_report">"Please mark each entry as Correct/Incorrect. If incorrect, please correct the individual values (in bold) by selecting appropriate values"</string>
    <string-array
        name="string_array_manual_override">
        <item
            >Force Start</item>
        <item
            >Force Stop</item>
    </string-array>
</resources>
