<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.energylens.CollectionTabActivity" >

    <item
        android:id="@+id/groundReport"
        android:icon="@drawable/ic_action_ground_report"
        android:showAsAction="ifRoom"
        android:title="@string/action_report"/>
    <item
        android:id="@+id/training"
         android:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_training"
        android:title="@string/action_train"/>
    <item
        android:id="@+id/appGroup"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
	<item
        android:id="@+id/appAbout"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/action_about"/>
	<item
        android:id="@+id/appManualOverride"
        android:orderInCategory="102"
        android:showAsAction="never"
        android:title="@string/action_manual_override"/>
 
</menu>